tests/snapshots/examples_fixtures/type_system__failing__196_effect_row_subtract_unresolved_single_e419.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/196_effect_row_subtract_unresolved_single_e419.flx
== compile ==
failed (compile)
== diagnostics ==
error[E419]: Unresolved Effect Row

I cannot resolve the effect variable `e` introduced by this call.

  examples/type_system/failing/196_effect_row_subtract_unresolved_single_e419.flx:34:13
   |
34 |     let _ = unresolved(1)
   |             ^^^^^^^^^^
   |             ---------- this call leaves an effect variable unconstrained

   |             ---------- this call to `unresolved` creates the effect obligation

Note:
  unresolved effect variable: e
  constraint source: effect-row checking for `unresolved`

Help:
  Add an explicit effect annotation such as `with e` or pass a callback with concrete effects.
== stdout ==
<not executed>
