tests/snapshots/examples_fixtures/type_system__failing__197_effect_row_subtract_unresolved_multi_e420.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
