tests/snapshots/examples_fixtures/type_system__failing__198_effect_row_subset_unsatisfied_e422.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx:13:5
   |
13 |     run_needs_console_clock(only_console)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     ------------------------------------- parameter 1 has type `() -> Unit with Console`

   |     ------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: () -> Unit with Console, Clock
  found parameter type: () -> Unit with Console
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `() -> Unit with Console, Clock` consistently.


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
