tests/snapshots/examples_fixtures/type_system__failing__199_effect_row_subset_ordered_missing_e422.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 39
---
Fixture: examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx:44:5
   |
44 |     run_needs_io_time(pure_worker)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     ------------------------------ parameter 1 has type `() -> Unit`

   |     ------------------------------ this type mismatch is reported here

Note:
  expected parameter type: () -> Unit with Console, FileSystem, Stdin, Clock, Env, Process
  found parameter type: () -> Unit
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `() -> Unit with Console, FileSystem, Stdin, Clock, Env, Process` consistently.


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
