tests/snapshots/examples_fixtures/type_system__failing__200_effect_row_absent_ordering_linked_violation_e421.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/200_effect_row_absent_ordering_linked_violation_e421.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E421]: Effect Requirement Mismatch

I cannot subtract effect `IO` from this effect row.

  examples/type_system/failing/200_effect_row_absent_ordering_linked_violation_e421.flx:20:13
   |
20 |     let _ = needs_linked_absence(row_var_worker, io_worker)
   |             ^^^^^^^^^^^^^^^^^^^^
   |             -------------------- this call violates an effect-row subtraction constraint

Note:
  requested subtraction: IO
  constraint source: effect-row subtraction during call checking

Help:
  Handle or include this effect before subtracting it from an effect row.
== stdout ==
<not executed>
