tests/snapshots/examples_fixtures/type_system__failing__201_base_hof_callback_effect_missing_e400.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 2 has the wrong type.

  examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx:52:5
   |
52 |     each([1, 2, 3], noisy_log)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     -------------------------- parameter 2 has type `() -> Unit with Console, FileSystem, Stdin, Env`

   |     -------------------------- this type mismatch is reported here

Note:
  expected parameter type: () -> Unit
  found parameter type: () -> Unit with Console, FileSystem, Stdin, Env
  the conflicting types meet at this expression

Help:
  Change parameter 2 to use `() -> Unit` consistently.


error[E400]: Missing Effect

requires effect `Console` but the enclosing context does not provide it

  examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx:52:5
   |
52 |     each([1, 2, 3], noisy_log)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     -------------------------- requires `Console`

Hint:
  annotate the enclosing function with `with Console`

Found 2 errors.
== stdout ==
<not executed>
