tests/snapshots/examples_fixtures/type_system__failing__202_hm_pure_caller_missing_io_e400.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/202_hm_pure_caller_missing_io_e400.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `write_log` requires effect `IO` in this function signature.

  examples/type_system/failing/202_hm_pure_caller_missing_io_e400.flx:11:5
   |
11 |     write_log("processing")
   |     ^^^^^^^^^
   |     --------- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
