tests/snapshots/examples_fixtures/type_system__failing__207_stage_parse_suppresses_type.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/207_stage_parse_suppresses_type.flx
== compile ==
failed (parse)
== diagnostics ==
error[E071]: Unterminated String

String literal is missing closing quote.

  examples/type_system/failing/207_stage_parse_suppresses_type.flx:8:18
  |
8 |     let broken = "unterminated
  |                  ^^^^^^^^^^^^^

Hint:
  Add a closing " at the end of the string.
== stdout ==
<not executed>
